# src-dgi

./: .clang-format  .gitignore  CMakeLists.txt  license.md  readme.md
assets/: CMakeLists.txt
assets/models/: mitsuba_knob.glb  sphere.glb
assets/shaders/: final.slang
assets/shaders/prefix-sum/: prefix_merge.slang  prefix_segments.slang  prefix_sum.slang
assets/shaders/ray-tracing/: ground_truth.slang  primary.slang
assets/shaders/shared/: atomic.slang  bvh.slang  camera.slang  fast_math.slang  hash.slang  octahedral.slang  sky.slang  tonemap.slang  wave.slang
assets/shaders/surfels/: accelerate.slang  cascade.slang  composite.slang  count.slang  direct_draw.slang  gather.slang  gather_tx4.slang  heatmap.slang  merge.slang  merge_tx4.slang  recycle.slang  spawn.slang  surfel.slang
examples/: CMakeLists.txt
examples/basic/: main.cpp  pch.h
src/wyre/: defines.h  result.cpp  result.h  wyre.cpp  wyre.h
src/wyre/core/: ecs-system.h  ecs.cpp  ecs.h
src/wyre/core/assets/: asset.h  assets.cpp  assets.h
src/wyre/core/components/: camera.cpp  camera.h  mesh.cpp  mesh.h  transform.cpp  transform.h
src/wyre/core/graphics/: device.h  renderer.h
src/wyre/core/scene/: aabb.cpp  aabb.h  bvh-maintainer.cpp  bvh-maintainer.h  bvh.cpp  bvh.h  triangle.cpp  triangle.h
src/wyre/core/system/: files.cpp  files.h  input.h  keycodes.h  log.cpp  log.h  window.h
src/wyre/platform/vulkan/: api.h  device.cpp  device.h  frame-data.h  renderer.cpp  renderer.h
src/wyre/platform/vulkan/hardware/: buffer.cpp  buffer.h  compute-builder.cpp  compute-builder.h  debug.cpp  debug.h  descriptor.cpp  descriptor.h  device.cpp  device.h  ext.cpp  ext.h  image.cpp  image.h  pipeline-builder.cpp  pipeline-builder.h
src/wyre/platform/vulkan/pipelines/final/: final.cpp  final.h  overlay.cpp  overlay.h
src/wyre/platform/vulkan/scene/: bvh-packer.cpp  bvh-packer.h
src/wyre/platform/vulkan/shader/: module.cpp  module.h
src/wyre/platform/vulkan/stages/: final.cpp  final.h  geometry.cpp  geometry.h  global-illumination.cpp  global-illumination.h
src/wyre/platform/windows/: input.cpp  input.h  window.cpp  window.h
(+29 files in other folders)
